Fixed dark theme switch menu item color and vertical align

--- a/ScoutSuite/output/data/inc-scoutsuite/css/scoutsuite.css
+++ b/ScoutSuite/output/data/inc-scoutsuite/css/scoutsuite.css
@@ -182,10 +182,6 @@ ul.no-bullet {
     color: #bbcdce;
 }
 
-.dropdown-item {
-    color: #647273;
-}
-
 .rationale-overlay {
     z-index: 2147483647;
     display: block;
@@ -199,6 +195,7 @@ ul.no-bullet {
     display: inline-block;
     width: 26px;
     height: 14px;
+    line-height: 1em;
   }
 
 .switch input { 
